# SPbAU-HW

openCL/openCLHw1/: CMakeLists.txt  cl.hpp  convolution.cl  main.cpp
